sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:8: error: '(' expected but identifier found.
    if plusPetit(i+1,i+2)
       ^